# website

./: .gitignore  .lintstagedrc  .vsls.json  GEMINI.md  LICENSE  biome.json  bun.lockb  components.json  next-sitemap.config.js  next.config.ts  package.json  tsconfig.json
.husky/: commit-msg  pre-commit
docs/shadcn/: chart.md
docs/tools/ajl-simulator/: plan.md  rate.md
public/: oasd.xml  robots.txt  sitemap2.xml
public/atcoder/: NOTICE
src/app/: globals.css  layout.tsx  not-found.tsx  old.tsx  page.tsx  sitemap.ts
src/app/_index/: accounts.tsx  greet.tsx
src/app/ajl-binoculars/: layout.tsx  page.tsx
src/app/mod/: layout.tsx  page.tsx
src/app/regacy/: page.tsx
src/app/teapot/: route.ts  route.tsx
src/app/tools/: layout.tsx  page.tsx
src/app/tools/ajl-binoculars/: layout.tsx
src/app/tools/ajl-simulator/: layout.tsx  page.tsx
src/app/tools/mod/: layout.tsx  page.tsx
src/app/wind/: page.tsx
src/components/: mode-toggle.tsx  nav.tsx  tool-card.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dropdown-menu.tsx  field.tsx  form.tsx  input-group.tsx  label.tsx  select.tsx  separator.tsx  spinning-text.tsx  textarea.tsx  tooltip.tsx  word-rotate.tsx
src/hooks/: useConfirm.tsx
src/lib/: layout.ts  metadata.ts
src/text/: meta.ts
src/types/: css.d.ts  meta.ts  toolmeta.ts
wasm/: Cargo.toml  LICENSE_MIT
wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
